--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ main {
   }
   
   .hamburger {
-    display: block; 
+    display:none; 
     font-size: 30px;
     cursor: pointer;
     padding: 10px;
@@ -304,7 +304,6 @@ footer {
   background-color: #96be25;
   width: 100%; /
   max-width: 900px; 
-	border-radius: 20px;
 
 }
 
