--- a/styles.css
+++ b/styles.css
@@ -302,7 +302,7 @@ footer {
 	padding-top: 10px;
 	padding-bottom: 10px;
   background-color: #96be25;
-  width: 100%; /
+  width: 100%; 
   max-width: 900px; 
 
 }
