--- a/styles.css
+++ b/styles.css
@@ -204,18 +204,6 @@ h3 {
   margin-bottom: 10px;           
 }
 
-li {
-  margin-bottom: 10px;           
-  font-size: 16px;               
-}
-
-ul {
-  list-style-type: disc;        
-  padding-left: 20px;           
-  margin: 0;                    
-  text-align: center;           
-}
-
 .iframe-container {
   margin-top: 10px;             
   text-align: center;
@@ -241,9 +229,9 @@ iframe {
 .container {
   display: flex;
   flex-wrap: wrap; 
-  justify-content: center; 
-  align-items: flex-start; 
-  max-width: 1200px; 
+  justify-content: space-around; 
+  align-items:stretch;
+  max-width: 1000px; 
   margin: 0 auto; 
 }
 
@@ -325,3 +313,55 @@ h4 {
 .answer:hover {
   background-color: #f0f0f0; 
 }
+
+
+.recipe-container {
+    display: flex;             
+    flex-wrap: wrap;            
+    justify-content: space-between; 
+    gap: 10px;                  
+    width: 100%;                
+    box-sizing: border-box;    
+    padding: 10px;             
+}
+
+.recipe-box {
+    background-color: white;
+    border: 1px solid #ffff;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+    padding: 15px;
+    width: calc(50% - 10px);   
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+    align-items: center;      
+    box-sizing: border-box;    
+}
+
+
+@media (max-width: 768px) {
+    .recipe-box {
+        width: 100%;
+    }
+}
+
+
+
+.recipe-image {
+    width: 60%; 
+    height: auto;  
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
+    display: block; 
+}
+
+ul, ol {
+    margin-left: 20px;
+    padding-left: 0; 
+}
+
+li {
+    padding-left: 5px; 
+}
+
